# Waifu2x

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: mirror-to-codeberg.yaml  test-lint.yaml
DOCS/: README.md
DOCS/waifu2x/: data_augmentation.md  dataset_sampler.md  index.md  iproc.md  module.md  pairwise_transform.md  reconstruct.md  srcnn.md  utils.md
DOCS/waifu2x/loss/: clipped_weighted_huber_loss.md  index.md
documentation/reference/: README.md
documentation/reference/waifu2x/: data_augmentation.md  dataset_sampler.md  index.md  iproc.md  module.md  pairwise_transform.md  reconstruct.md  srcnn.md  utils.md
documentation/reference/waifu2x/loss/: clipped_weighted_huber_loss.md  index.md
documentation/tutorials/: README.md  cli.md  module.md
readme-assets/icons/: Waifu2x.xcf
test/: test.py
tests/: test_main.py  test_noise.py  test_scale.py  test_scale_resnet10.py  test_scale_upconv7.py  test_scale_upresnet10.py
waifu2x/: __init__.py  __main__.py  data_augmentation.py  dataset_sampler.py  iproc.py  pairwise_transform.py  reconstruct.py  srcnn.py  utils.py
waifu2x/loss/: __init__.py  clipped_weighted_huber_loss.py
